3.2.15 (2019-07-09)
  * Added function scalaDevelDownloadJARs to aid in downloadiing JAR files
    during package installation.
  * Fixed regression regarding processing of stdout and stderr arguments
    to scala function.

3.2.14 (2019-07-02)
  * In scalaDevelDeployJARs function, don't delete other JARs.
  * More robust work-around for Scala bug #11565.

3.2.13 (2019-06-20)
  * Work around Scala bug #11565 (https://github.com/scala/bug/issues/11565)
    where paths of JARs added to the classpath cannot have spaces.
  * Removed the need for 'configure' script, allowing Windows to install
    source package without installing developer tools.
  * More robust scalaConfig function.
  * Other miscellaneous minor bug fixes and robustification.

3.2.12 (2019-06-14)
  * Never released.

3.2.11 (2019-06-07)
  * Support for Scala 2.13.
  * More avoidance of "No Java runtime present..." pop-up on Mac OS X.

3.2.10 (2019-05-28)
  * Fixed a regression introduced by 3.2.7 which broke embedding R in Scala.
  * Rewrote the scalaSBT function with an eye towards generality.
  * Added the scalaDevelDeployJARs function to facilitate package development.
  * Dropped the scalaSBTBuildInstallRestart function.
  * Installation of Java now checks the architecture (in addition to the OS).
  * Attempt to fix error in CRAN package checks that sporadically occur.
  * Worked around a bug which may occur when running system2 on RStudio.
  * Worked around a bug in FastR on GraalVM.

3.2.9 (2019-05-18)
  * Avoid "No Java runtime present, requesting install" pop-up on Mac OS X.
  * Fixed long-standing bug related to very large arrays of Int and Double
    from the JVM.
  * Fixed a regression introduced by 3.2.8 which broke embedding R in Scala.
  * Attempt to debug error in CRAN package checks by giving more information
    on failed scalaConfig().

3.2.8 (2019-05-11)
  * Fixed installation problem when Java and/or Scala are not already
    installed.

3.2.7 (2019-05-11)