@@ -15,6 +15,8 @@
 /R/rscala/vignettes/rscala.out
 /R/rscala/vignettes/rscala.pdf
 /R/rscala/vignettes/rscala.tex
+/R/rscala/vignettes/rscala-concordance.tex
+/R/rscala/vignettes/rscala.synctex.gz
 /src/main/resources
 /deliveries/rscala_*.tar.gz
 /deliveries/rscala*.Rcheck
