@@ -4,7 +4,7 @@
 #' directory.
 #'
 #' @param verbose Should details of the search for Scala and Java be provided?
-#'   Or, if an rscala bridge is provided instead of a logical, the function
+#'   Or, if a Scala bridge is provided instead of a logical, the function
 #'   returns a list of details associated with the supplied bridge.
 #' @param reconfig If \code{TRUE}, the script \code{~/.rscala/config.R} is
 #'   rewritten based on a new search for Scala and Java.  If \code{FALSE}, the
@@ -21,13 +21,13 @@
 #'   '~/.rscala/sbt' if necessary?
 #'
 #' @return Returns a list of details of the Scala and Java binaries.
-#' @references {David B. Dahl (2018). “Integration of R and Scala Using rscala.”
+#' @references {David B. Dahl (2019). "Integration of R and Scala Using rscala."
 #'   Journal of Statistical Software, in editing. https://www.jstatsoft.org}
 #' @export
 #' @examples \donttest{
-#'
 #' scalaConfig()
 #' }
+#' 
 scalaConfig <- function(verbose=TRUE, reconfig=FALSE, download=character(0), require.sbt=FALSE) {
   if ( inherits(verbose,"rscalaBridge") ) return(attr(verbose,"details")$config)
   if ( ( length(download) > 0 ) && ( download == TRUE ) ) download <- c("java","scala","sbt")
