@@ -1,15 +1,14 @@
 #' Temporarily Disconnect Scala by Closing Connections
 #'
-#' This function temporarily disconnects an rscala bridge by closing its
+#' This function temporarily disconnects a Scala bridge by closing its
 #' associated socket connections.  The primary place where this function is used
 #' is at the end of examples of packages that depend on rscala (because, under
 #' some versions of R, "\code{R CMD check --as-cran}" does not permit
 #' connections to persist after an example ends).
 #'
-#' @param bridge An rscala bridge.
+#' @param bridge A Scala bridge.
 #' @export
 #' @examples \donttest{
-#'
 #' showConnections()
 #' s <- scala()
 #' showConnections()         # No additional connections yet.
@@ -21,6 +20,7 @@
 #' showConnections()         # New connections are established as needed.
 #' close(s)
 #' }
+#' 
 scalaDisconnect <- function(bridge=scalaFindBridge()) {
   details <- attr(bridge,"details")
   if ( details[["disconnected"]] ) return(invisible())
